--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,6 @@ rvm:
   - 2.2.4
   - 2.3.0
 gemfile:
-  - Gemfile
   - gemfiles/rails-4.1.gemfile
   - gemfiles/rails-4.2.gemfile
-  - gemfiles/rails-master.gemfile
-matrix:
-  include:
-    - rvm: 2.1.8
-      gemfile: gemfiles/rails-3.2.gemfile
-  exclude:
-    - rvm: 2.1.8
-      gemfile: gemfiles/rails-master.gemfile
-  allow_failures:
-    - gemfile: gemfiles/rails-master.gemfile
-  fast_finish: true
+  - gemfiles/rails-5.0.gemfile
