Cleanup dummy app logs + fix for older ruby

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: ruby
 cache: bundler
-sudo: false
 rvm:
   - 2.1.8
   - 2.2.4
   - 2.3.0
 gemfile:
-  - Gemfile
-  - gemfiles/rails-4.1.gemfile
-  - gemfiles/rails-4.2.gemfile
-  - gemfiles/rails-5.0.gemfile
+  - test/gemfiles/rails-4.1.gemfile
+  - test/gemfiles/rails-4.2.gemfile
+  - test/gemfiles/rails-5.0.gemfile
