--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,7 @@ rvm:
 gemfile:
   - test/gemfiles/rails-4.1.gemfile
   - test/gemfiles/rails-4.2.gemfile
-  - test/gemfiles/rails-5.0.gemfile
+matrix:
+  include:
+    - rvm: 2.3.0
+      gemfile: test/gemfiles/rails-5.0.gemfile
