--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
 language: ruby
 cache: bundler
 rvm:
-  - 2.3.4
-  - 2.4.1
+  - 2.3.8
+  - 2.4.7
+  - 2.5.6
+  - 2.6.4
 gemfile:
   - test/gemfiles/rails-4.2.gemfile
   - test/gemfiles/rails-5.0.gemfile
   - test/gemfiles/rails-5.1.gemfile
+  - test/gemfiles/rails-5.2.gemfile
+  - test/gemfiles/rails-6.0.gemfile
 matrix:
   include:
-    - rvm: 2.3.4
+    - rvm: 2.3.8
       gemfile: test/gemfiles/rails-4.1.gemfile
